# gonzo-langgraph

./: .env.example  .env.template  .gitignore  README.md  gonzo-graph-structure.mermaid  pyproject.toml  requirements.txt  run.py  run_gonzo.py  setup.py  setup_gonzo.py  test_gonzo_live.py  test_x_integration.py
config/: __init__.py  config.yml  settings.py
docs/: architecture.md  updated_architecture.md  workflow.mermaid
gonzo/: __init__.py  agent.py  config.py  gonzo_workflow.py  state.py  types.py  workflow.py
gonzo/causality/: __init__.py  analyzer.py  checkpointing.py  parsers.py  semantic_matcher.py  test_checkpointing.py  types.py
gonzo/collectors/: pattern_source.py  youtube.py
gonzo/config/: __init__.py  analysis.py  constants.py  models.py  prompts.py  tasks.py  topics.py  x.py  x_config.py
gonzo/context/: time_periods.py
gonzo/core/: __init__.py  agent.py  state.py
gonzo/evolution/: __init__.py  integrations.py  memory.py  metrics.py  state.py  system.py
gonzo/graph/: __init__.py  state.py  workflow.py
gonzo/integrations/: crypto_api.py  x_client.py  x_toolkit.py  youtube_api.py  youtube_data.py  youtube_entity_extractor.py  (+1 more)
tests/: __init__.py  conftest.py  mocks.py  test_assessment.py  test_assessment_knowledge_flow.py  test_content_discovery.py  test_content_monitor.py  test_crypto.py  test_initial_assessment.py  test_knowledge_narrative.py  test_memory_crypto.py  test_narrative.py  test_rag.py  test_rag_integration.py  test_real_content.py  test_task_manager.py  test_x_integration.py  test_youtube_data.py  test_youtube_integration.py
(+166 files in other folders)
