[project]
name = "gonzo-langgraph"
version = "0.1.0"
description = "A dystopian attorney from 3030, here to analyze media and prevent catastrophic timelines."
requires-python = ">=3.10,<3.13"
dependencies = [
    "langgraph>=0.0.15",
    "langchain",
    "langchain-core",
    "pydantic>=2.0",
    "youtube-transcript-api",
    "google-api-python-client"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3